force-app/main/default/objects/User/fields/AceptaPoliticaPrivacidad__c.field-meta.xml
<CustomField>
    <fullName>AceptaPoliticaPrivacidad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que viene de los usuarios que se registran de la comunidad</description>
    <label>Acepta la política de privacidad</label>
    <type>Checkbox</type>
</CustomField>