force-app/main/default/objects/User/fields/Departamento_normalizado__c.field-meta.xml
<CustomField>
    <fullName>Departamento_normalizado__c</fullName>
    <description>Departamento del usuario para la Categorización de la llamada</description>
    <label>Departamento normalizado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sin especificar</fullName>
            </value>
            <value>
                <fullName>ATENCIÓN AL CLIENTE (ATC)</fullName>
            </value>
            <value>
                <fullName>CALL CENTER</fullName>
            </value>
            <value>
                <fullName>GESTIÓN DE COBROS</fullName>
            </value>
            <value>
                <fullName>APEX Y ACMS Y FACTURACIÓN</fullName>
            </value>
            <value>
                <fullName>PROCESAL</fullName>
            </value>
            <value>
                <fullName>EJECUCIONES</fullName>
            </value>
            <value>
                <fullName>CONTROL DE GESTIÓN</fullName>
            </value>
            <value>
                <fullName>GESTIÓN DE CLIENTE</fullName>
            </value>
            <value>
                <fullName>REDACCIÓN</fullName>
            </value>
            <value>
                <fullName>VENTAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>