force-app/main/default/objects/User/fields/DeseoRecibirComunicaciones__c.field-meta.xml
<CustomField>
    <fullName>DeseoRecibirComunicaciones__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para indicar que el usuario quiere recibir comunicaciones de Arriaga Asociados. Este campo se marca desde la página de registro de la comunidad</description>
    <label>Deseo Recibir Comunicaciones</label>
    <type>Checkbox</type>
</CustomField>