force-app/main/default/objects/User/fields/Puesto__c.field-meta.xml
<CustomField>
    <fullName>Puesto__c</fullName>
    <description>Cargo del usuario para cálculo de incentivos</description>
    <inlineHelpText>Cargo o Función para cálculo de incentivos e informes</inlineHelpText>
    <label>Puesto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADMINISTRATIVO</fullName>
            </value>
            <value>
                <fullName>ADMINISTRATIVO SENIOR</fullName>
            </value>
            <value>
                <fullName>ASESOR</fullName>
            </value>
            <value>
                <fullName>ASESOR SENIOR</fullName>
            </value>
            <value>
                <fullName>COORDINADOR</fullName>
            </value>
            <value>
                <fullName>JEFE DE ZONA</fullName>
            </value>
            <value>
                <fullName>RESPONSABLE DE CENTRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>