force-app/main/default/objects/User/fields/Puesto_Activo_Desde__c.field-meta.xml
<CustomField>
    <fullName>Puesto_Activo_Desde__c</fullName>
    <description>Fecha Inicio del Puesto para cálculo de Incentivo e Informes</description>
    <inlineHelpText>Fecha inicio del puesto actual</inlineHelpText>
    <label>Puesto Activo Desde</label>
    <type>Date</type>
</CustomField>