force-app/main/default/objects/User/fields/signaturit__SIG_SignaturitToken__c.field-meta.xml
<CustomField>
    <fullName>signaturit__SIG_SignaturitToken__c</fullName>
    <description>deprecated field</description>
    <label>API key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>