force-app/main/default/objects/User/listViews/QAUsers.listView-meta.xml
<ListView>
    <fullName>QAUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>Departamento_normalizado__c</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>user0</value>
    </filters>
    <label>QAUsers</label>
    <language>en_US</language>
</ListView>