force-app/main/default/objects/User/listViews/UAT.listView-meta.xml
<ListView>
    <fullName>UAT</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>Departamento_normalizado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>equals</operation>
        <value>meperez@arriagaasociados.com.partial</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>equals</operation>
        <value>ssanchez@arriagaasociados.com.partial</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>equals</operation>
        <value>lhernandez@arriagaasociados.com.partial</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>equals</operation>
        <value>pmendez@arriagaasociados.com.partial</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>equals</operation>
        <value>csanchez@arriagaasociados.com.partial</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>equals</operation>
        <value>adelegido@arriagaasociados.com.partial</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>equals</operation>
        <value>asanchez@arriagaasociados.com.partial</value>
    </filters>
    <label>UAT</label>
    <language>en_US</language>
</ListView>